@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,22 +21,16 @@
  * questions.
  */
 
- // key: compiler.note.preview.filename
- // key: compiler.note.preview.recompile
- // key: compiler.err.unclosed.text.block
- // key: compiler.err.text.block.template.is.not.well.formed
- // key: compiler.err.premature.eof
- // options: --enable-preview -source ${jdk.version}
+import java.util.function.Function;
 
-import java.lang.*;
+public class HiddenLambda implements HiddenTest {
+     public void test() {
+         Function<Object, String> f = o -> o.toString();
+         String s = f.apply(this);
+         throw new Error("thrown by " + s);
+     }
 
-class StringTemplateUnclosedTextBlock {
-    String m() {
-        int x = 10;
-        return STR."""
-                aaa
-                \{x
-                """
-        ;
-    }
+     public String toString() {
+         return getClass().getName();
+     }
 }
